fixed issue of not showing the description

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type ="checkbox" class="addon" value="less-sugar">Less Sugar
             <input type ="checkbox" class="addon" value="no-sugar">No Sugar
         </fieldset>
-        <button type ="button">Order Smoothie</button>
+        <button class="submit" type ="button">Order Smoothie</button>
     </form>
     <div class ="output"></div>
 </body>
