added more images for more creativity

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <option value ="green-apple">Green Apple</option>
             <option value ="pineapple">Pineapple</option>
             <option value ="mixed-berry">Mixed Berry</option>
-            <option value ="passionfruit">Passion fruit</option>
+            <option value ="passionfruit">Passion Fruit</option>
         </select>
         <Label for ="milk-type">Choose your type of milk you want in your smoothie</Label>
         <select class ="milk-type" name="milk-type">
